pushed cube at right corner out of viewing field; fixed missing coloring in fingers of visualizer

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -51,7 +51,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 1080px;
+    min-height: 1580px;
     pointer-events: none;
 }
 
